force-app/main/default/objects/ContentVersion/fields/docmanage__Document_Type__c.field-meta.xml
<CustomField>
    <fullName>docmanage__Document_Type__c</fullName>
    <label>Document Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>