force-app/main/default/objects/ContentVersion/fields/EnableUpload__c.field-meta.xml
<CustomField>
    <fullName>EnableUpload__c</fullName>
    <label>Enable Upload</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>