force-app/main/default/objects/ContentVersion/validationRules/Prevent_Upload_Without_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Upload_Without_Type</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Type__c ,&quot;&quot;)</errorConditionFormula>
    <errorMessage>Any Reason</errorMessage>
</ValidationRule>